src/objects/fcf__Exception_Log_Detail__c.object
<CustomObject>
    <description>The Exception Log Detail object stores records specifically related to DMLExceptions and EmailExceptions.</description>
    <fields>
        <fullName>fcf__DML_Failed_Row_Number__c</fullName>
        <description>The index of the exception log detail related to the other detail records for this exception.</description>
        <inlineHelpText>The index of the exception log detail related to the other detail records for this exception.</inlineHelpText>
        <label>DML Failed Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcf__DML_Field_Names__c</fullName>
        <description>The names of the field or fields that caused the error.</description>
        <inlineHelpText>The names of the field or fields that caused the error.</inlineHelpText>
        <label>DML Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcf__DML_ID__c</fullName>
        <description>The ID of the failed record that caused the error.</description>
        <inlineHelpText>The ID of the failed record that caused the error.</inlineHelpText>
        <label>DML ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcf__DML_Index__c</fullName>
        <description>The original row position.</description>
        <inlineHelpText>The original row position.</inlineHelpText>
        <label>DML Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcf__DML_Message__c</fullName>
        <description>The user message.</description>
        <inlineHelpText>The user message.</inlineHelpText>
        <label>DML Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcf__DML_Type__c</fullName>
        <description>The value of the System.StatusCode enum.</description>
        <inlineHelpText>The value of the System.StatusCode enum.</inlineHelpText>
        <label>DML Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcf__Exception_Log__c</fullName>
        <label>Exception Log</label>
        <referenceTo>fcf__Exception_Log__c</referenceTo>
        <relationshipLabel>Exception Log Details</relationshipLabel>
        <relationshipName>Exception_Log_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Exception Log Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Exception Log Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>